# nvim-update

./: Cargo.toml  README.md
src/: main.rs
